# budget_assistant

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yaml  pyproject.toml  requirements.txt
application/: unit_of_work.py
application/use_cases/: add_receipt.py  get_labels.py  get_receipt_list.py
domain/entities/: receipt.py
domain/interfaces/repositories/: budget.py  receipts.py
domain/vo/: amount.py
entrypoints/api/: app.py  utils.py
entrypoints/api/handlers/: base.py  budget.py  receipt.py
entrypoints/api/models/: http.py  receipt.py
infra/db/: ctx.py  db.py  unit_of_work.py
infra/db/models/: base.py  budget.py  receipt.py
infra/db/repositories/: budget.py  receipt.py
